crates/crucible-cli/src/tui/components/snapshots/crucible_cli__tui__components__session_history__tests__snapshot_tests__session_history_interleaved.snap
---
source: crates/crucible-cli/src/tui/components/session_history.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Read my note                                                                 "
"                                                                                "
" ● Let me read that for you.                                                    "
"                                                                                "
"✓ read → success                                                                "
"  Note contents here                                                            "
"                                                                                "
" ● I've read the note.                                                          "
