crates/crucible-cli/src/tui/components/snapshots/crucible_cli__tui__components__session_history__tests__snapshot_tests__session_history_long_wrap.snap
---
source: crates/crucible-cli/src/tui/components/session_history.rs
expression: terminal.backend()
---
"                                                                                "
" ● This is a very long message that should wrap across multiple lines. The      "
"   widget needs to handle word wrapping correctly to ensure that content is     "
"   displayed properly within the viewport width constraints.                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
