crates/crucible-cli/src/tui/components/snapshots/crucible_cli__tui__components__session_history__tests__snapshot_tests__session_history_multiple_tools.snap
---
source: crates/crucible-cli/src/tui/components/session_history.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Search the codebase                                                          "
"                                                                                "
"✓ grep → 2 matches                                                              "
"  match 1                                                                       "
"  match 2                                                                       "
"                                                                                "
"✗ read → file not found                                                         "
