crates/crucible-cli/src/tui/components/snapshots/crucible_cli__tui__components__session_history__tests__snapshot_tests__session_history_scroll_middle.snap
---
source: crates/crucible-cli/src/tui/components/session_history.rs
expression: terminal.backend()
---
"                                                                                "
" > Message 0                                                                    "
"                                                                                "
" > Message 1                                                                    "
"                                                                                "
" > Message 2                                                                    "
"                                                                                "
" > Message 3                                                                    "
"                                                                                "
" > Message 4                                                                    "
"                                                                                "
" > Message 5                                                                    "
"                                                                                "
" > Message 6                                                                    "
"                                                                                "
" > Message 7                                                                    "
"                                                                                "
" > Message 8                                                                    "
"                                                                                "
" > Message 9                                                                    "
"                                                                                "
" > Message 10                                                                   "
"                                                                                "
" > Message 11                                                                   "
