crates/crucible-cli/src/tui/components/snapshots/crucible_cli__tui__components__session_history__tests__snapshot_tests__session_history_streaming_code.snap
---
source: crates/crucible-cli/src/tui/components/session_history.rs
expression: terminal.backend()
---
"                                                                                "
" ● Here's code:                                                                 "
"   fn main() {                                                                  "
"       // incomplete                                                            "
"   ▌                                                                            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
